<package format="2">
  <name>diff_drive_controller_cellotape</name>
  <version>0.0.1</version>
  <description>
    Controller for diff drive.
  </description>
  <maintainer email="m.yoshi.1700@gmail.com">Masahiko Toyoshi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
